--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'ch.qos.logback:logback-classic:1.4.11'
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
